Prevent display div from collapsing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     border: yellow 2px solid;
     max-width: 150px; /*FIXME:*/
     margin: 0 0 5px 0;
+    min-height: 1pt;
 }
 .display#main .display{
     margin: 0 5px;
